--- a/src/components/Box/styles.module.css
+++ b/src/components/Box/styles.module.css
@@ -21,7 +21,6 @@
 .action:is(.action) {
     cursor: pointer;
     font-size: 1.2rem;
-    line-height: .8lh;
     border-radius: .25em;
     border: 1px solid transparent;
 
@@ -57,7 +56,6 @@
     border: 1px solid;
     border-radius: .25em;
     font-size: 1.2rem;
-    line-height: .8lh;
 
     button {
         border-radius: 0;
