--- a/src/components/Icon/styles.module.css
+++ b/src/components/Icon/styles.module.css
@@ -12,6 +12,7 @@
     font-style: normal;
     font-size: 1.5em;
     line-height: 1lh;
+    height: 1lh;
     letter-spacing: normal;
     text-transform: none;
     white-space: nowrap;
